<resources>
    <string name="app_name">Tu vi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="calling">Calling</string>
    <string name="member_list">Member list</string>
    <string name="change_info">Change info</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="education">Education</string>
    <string name="relationship">Relationship</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_mew_password">Repeat mew password</string>
    <string name="change_color">Change Color</string>
    <string name="save">Save</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="friend_s_nickname">Friend\'s Nickname</string>
    <string name="member">Member</string>
    <string name="nickname">Nickname</string>
    <string name="setting">Setting</string>
    <string name="delete_member">Delete Member</string>
    <string name="back">Back</string>
    <string name="upload_photo">Upload photo</string>
    <string name="create">Create</string>
    <string name="create_a_posts">Create a posts</string>
    <string name="post">Post</string>
    <string name="add_photo">Add Photo</string>
    <string name="library">Library</string>
    <string name="camera">Camera</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notice">Notification</string>
    <string name="setting_group_chat">Setting Group Chat</string>
    <string name="chat_group_name">Chat Group Name</string>
    <string name="upload_file">Upload file</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="edit_background">Edit background</string>
    <string name="add_member">Add member</string>
    <string name="help_center">Help center</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="tuvi">Tu vi</string>
    <string name="loading">Loading</string>
    <string name="online">Online</string>
    <string name="notification">Notification</string>
    <string name="private_setting">Private setting</string>
    <string name="who_can_see_your_posts">Who can see your posts?</string>
    <string name="who_can_see_your_information">Who can see your information?</string>
    <string name="who_can_see_your_friends">Who can see your friends?</string>
    <string name="hide_post">Hide post</string>
    <string name="hello">Hello</string>
    <string name="my_profile">My profile</string>
    <string name="friends">FRIENDS</string>
    <string name="posts">POSTS</string>
    <string name="i_agree_to">I agree to</string>
    <string name="the_terms">the terms</string>
    <string name="of_the_app">of the app</string>
    <string name="next">Next</string>
    <string name="setting_account">Setting account</string>
    <string name="change_information">Change information</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_background_photo">Change background photo</string>
    <string name="logout">Logout</string>
    <string name="add_friend">Add Friend</string>
    <string name="incorrect_email_pass">Incorrect email or password</string>
    <string name="email_reuired">\'Email\' is required</string>
    <string name="pass_reuired">\'Password\' is required</string>
    <string name="confirm_pass_reuired">\'Confirm password\' is required</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="have_a_error">Have a error! Please try again</string>
    <string name="must_agree">You must agree to the terms to continue</string>
    <string name="email_wrong_format">The email address is badly formatted</string>
    <string name="successful">Successful</string>
    <string name="email_exits">Email is exits</string>
    <string name="name_reuired">Full name is required</string>
    <string name="birthday_reuired">Birthday is required</string>
    <string name="mus_old_13">Age must be more than 13</string>
    <string name="group_name_required">Group name is required</string>
    <string name="do_u_delete_member">Do you want to delete member?</string>
    <string name="do_u_delete_message">Do you want to delete message?</string>
    <string name="post_successful">Post successful</string>
    <string name="liked_ur_post">liked your post</string>
    <string name="comment_ur_post">commented your post</string>
    <string name="choose_iamge">You must to choose image</string>
    <string name="input_old_pass">Please input old password</string>
    <string name="input_new_pass">Please input new password</string>
    <string name="input_re_pass">Please input re password</string>
    <string name="pass_dont_match">Password don\'t match</string>
    <string name="max_length">Password length must be at least 6 characters</string>
    <string name="describe">Please describe the problem you have</string>
    <string name="sign_out">Do you want to sign out?</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="p">Pусский язык</string>
    <string name="chat">Chat</string>
    <string name="send_a_friend_request">send you a friend request</string>
    <string name="city_unknow">City: Unknow</string>
    <string name="education_unknown">Education: Unknown</string>
    <string name="unknown">Unknown</string>
    <string name="send_request">Send request</string>
    <string name="delete_message">Do you want to delete message?</string>
    <string name="accep_friends">Do you accept to the friend request?</string>
    <string name="you">You</string>
    <string name="photo">Photo</string>
    <string name="close">Close</string>
    <string name="un_friend">Unfriend</string>
    <string name="do_u_send_request">Do you send to the friend request?</string>
    <string name="delete">Delete</string>
    <string name="message_create_post">what are you thinking? \n Please input caption or something media</string>
    <string name="message_call">Please update the microphone permission for the app</string>
    <string name="like">Like</string>
    <string name="cmt">Comment</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="post_shared">The post has been shared</string>
    <string name="add_video">Add Video</string>
    <string name="send_message">send message</string>
    <string name="avt_required">Avatar is required</string>
    <string name="shared_ur_post">shared your post</string>
    <string name="changed_avatar">changed avatar</string>
    <string name="changed_bg">changed background</string>
    <string name="shared_the_post">shared the post</string>
    <string name="the_post_has_beed_delete">The post has been deleted</string>
    <string name="change_nn_fail">Nickname change failed. \n Please try again</string>
    <string name="search">Search</string>
    <string name="do_u_want_to_cancel_action">Do you want to cancel the action?</string>
</resources>