<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.main.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="26dp"
            android:paddingTop="28dp"
            android:paddingEnd="26dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avtImg"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@+id/updatePhotoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_photo"
                    android:textColor="@color/blue" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:hint="Full name"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/birthDayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/birthDayTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:cursorVisible="false"
                    android:inputType="none"
                    android:focusableInTouchMode="false"
                    android:hint="Birth day"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/cityTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:hint="City"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/educationTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:hint="Education"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relationship"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/relationshipTV"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:hint="Relationship"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreate"
                style="@style/ButtonStyle"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/create" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>