<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_marginTop="8dp"
    tools:context=".ui.main.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="bottom"
                android:paddingStart="4dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/setting_account"/>
        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:paddingTop="28dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/changeInfoBtn"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/change_information"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/changePassBtn"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="start|center"
                android:text="@string/change_password"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/changePrivacyBtn"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/privacy_settings"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/helpCenterBtn"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/help_center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/changeAvtBtn"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/change_avatar"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/changeBgBtn"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/change_background_photo"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/changeLanguageBtn"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/change_language"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/logOutBtn"
            app:cardBackgroundColor="@color/white"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:text="@string/logout"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>