<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.account.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/red"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColorHint="@color/grey" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingEnd="34dp"
                    android:paddingStart="2dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <ImageView
                    android:id="@+id/showPassImg"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/view"/>

            </FrameLayout>

            <TextView
                android:id="@+id/forgetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="32dp"
                android:textAllCaps="false"
                android:background="@drawable/border_button_bg_white"
                android:text="@string/create_a_new_account"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>