<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="16dp"
    android:layout_marginTop="8dp"
    android:paddingEnd="16dp"
    tools:context=".ui.main.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:gravity="bottom"
                android:paddingStart="4dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/change_info"/>

            <TextView
                android:id="@+id/updateTV"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="18sp"
                android:textAlignment="viewEnd"
                android:layout_gravity="end|bottom"
                android:textColor="@color/red"/>
        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:paddingTop="28dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/name"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">

            <EditText
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:gravity="start|center"
                android:backgroundTint="@android:color/transparent"
                android:hint="Full name"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/birthday"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:id="@+id/birthDayTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:backgroundTint="@android:color/transparent"
                android:hint="Birthday"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/city"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">
            <EditText
                android:id="@+id/cityTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:backgroundTint="@android:color/transparent"
                android:hint="City"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/education"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">
            <EditText
                android:id="@+id/educationTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:backgroundTint="@android:color/transparent"
                android:hint="Education"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/relationship"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">

            <EditText
                android:id="@+id/relationshipTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start|center"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:hint="Relationship"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>